fix swagger schema.
